fix z-index for the final scores

--- a/css/app.styl
+++ b/css/app.styl
@@ -148,7 +148,6 @@ a.button
   position: absolute
   top: 0
   left: 0
-  z-index: 5
   
 .tile
   height: 1.59rem
